refactor: permutations